--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "axios": "^1.5.0",
     "rollup-plugin-dotenv": "^0.5.0",
-    "svelte-multiselect": "^10.2.0"
+    "svelte-multiselect": "^10.2.0",
+    "sweetalert2": "^11.7.32"
   }
 }
